fix: post content blockquote + paragraph spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -10,6 +10,10 @@
 }
 
 blockquote {
-  @apply text-gray-700 border-l border-teal-400 m-0 py-0 px-4;
+  @apply text-gray-700 border-l border-teal-400 my-3 px-4;
+}
+
+.post-content p {
+  @apply mb-3;
 }
 /* purgecss end ignore */
